# new-wdsc

./: .env  .gitignore  9  论文综述_report.docx  README.md  __init__.py  document.docx  document_report.docx  document_report_1773308999.docx  document_report_1774343060.docx  document_report_BOTH.docx  document_report_LLM.docx  document_report_RULE_LLM.docx  main.py  pyproject.toml  requirements.txt  test_document.txt  test_document_report.docx  test_llm.py  test_review.py  test_review_api.py  test_save_result.py  test_save_review_result.py
app/modules/: document_generator.py  document_parser.py  document_reviewer.py  review_framework.py
app/services/: knowledge_base.py  nlp_service.py
app/utils/: config.py  helpers.py
config/: settings.py
core/: __init__.py  executor.py
data/knowledge/: domain_knowledge.json
data/rules/: review_rules.json
data/templates/: technical_document_template.docx
examples/: review_rules_example.py
llm/: __init__.py  client.py  prompts.py
models/: __init__.py  document.py
parsers/: __init__.py  docx_parser.py  review_parser.py
reporters/: __init__.py  base_reporter.py
results/: test_document_审查结果_20260306_180038.docx
rules/: __init__.py  base_rule.py  checkers.py  grammar_checker.py
rules/aviation/: actuator_rules.py
rules/common/: format.py  grammar.py
rules/loaders/: rule_loader.py
