[project]
name = "new-wdsc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask==2.3.3",
    "flask-restful==0.3.9",
    "networkx==3.1",
    "pypdf2==3.0.1",
    "python-docx==0.8.11",
    "python-dotenv==1.0.0",
    "requests==2.31.0",
]
