[project]
name = "profilere"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.0.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.13.1",
    "python-docx>=0.8.11",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
]
